@@ -7,6 +7,7 @@ from sentry_sdk.integrations.ariadne import AriadneIntegration
 from sentry_sdk.integrations.redis import RedisIntegration
 from sentry_sdk.integrations.sqlalchemy import SqlalchemyIntegration
 from sentry_sdk.integrations.starlette import StarletteIntegration
+from sentry_sdk.integrations.aiohttp import AioHttpIntegration
 from starlette.applications import Starlette
 from starlette.endpoints import HTTPEndpoint, Request
 from starlette.responses import JSONResponse
@@ -37,7 +38,13 @@ async def start_up():
         sentry_sdk.init(
             SENTRY_DSN,
             enable_tracing=True,
-            integrations=[StarletteIntegration(), AriadneIntegration(), SqlalchemyIntegration(), RedisIntegration()],
+            integrations=[
+                StarletteIntegration(),
+                AriadneIntegration(),
+                SqlalchemyIntegration(),
+                RedisIntegration(),
+                AioHttpIntegration(),
+            ],
         )
 
     except Exception as e:
