@@ -9,14 +9,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 SQLAlchemy = "^2.0.22"
-httpx = "^0.25.0"
 psycopg2-binary = "^2.9.9"
 redis = {extras = ["hiredis"], version = "^5.0.1"}
 uvicorn = "^0.24"
 sentry-sdk = "^1.32.0"
-gql = {git = "https://github.com/graphql-python/gql.git", rev = "master"}
-starlette = {git = "https://github.com/encode/starlette.git", rev = "master"}
-ariadne = {git = "https://github.com/tonyrewin/ariadne.git", rev = "master"}
+starlette = "^0.32.0.post1"
+gql = "^3.4.1"
+ariadne = "^0.21"
+aiohttp = "^3.9.1"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^69.0.2"
